=head1 Math::GSL Changes

=head1 v0.23 - March 2011
    - Fixed the tolerance of some tests that were causing CPANtesters failures
    - Fixed some doc typos

=head1 v0.22 - June 2010
    - Improved tests
    - == and != operators for Vectors
    - Fixed the export of hypergeometric functions (Thierry Moisan)
    - In instantiation of GSLBuilder in Build.PL, the value for the parameter
      include_dirs were corrected to an anonymous empty array, instead of an
      empty string.  (Jakob Ilves)
    - Operator overloading of vector equality (Thierry Moisan)
    - Various doc fixes (Pjotr Prins)
    - Typemap fixes (Vincent Danjean)

=head1 v0.20 - May 19 2009
    - $rng->get($n) will now return the next $n values of the random number generator
    - Fixed + added test for RT#45044 math-gsl eigenpair bug, reported with patch by Ian Malone
    - Added more tests for Randist
    - Fixed some incorrectly written tests for BLAS and Linalg
    - Improved NTuple support and tests
    - Improvements to callbacks, thanks to patches from piotrj
    - The following improvements were merged from Vincent Danjean's git repo:
    - Fixed some memory leaks caused by in-typemaps without argout-typemaps
    - Improved portable callback implementation
    - Correct handling of double, float and size_t on x64
    - Removed duplicate definition of fopen/fclose in VectorComplex
    - Fix bug where proper flags to SWIG were not passed

=head1 v0.18 - March 23 2009

    - Make Math::GSL play nice with GSL 1.12
    - Added swap() to Vector objects with tests and docs
    - Added p-norms to Vector objects via norm() and normalize()
    - Added operator overloading so that
            abs $vector == $vector->norm
    - Added as_vector() to Matrix and MatrixComplex objects
    - Added inverse(), is_square(), det(),  lndet(), zero() and identity()
        to Matrix objects
    - Added inverse(), is_square(), det(),  lndet(), zero(), identity() 
        and hermitian() to MatrixComplex objects