@@ -1,5 +1,8 @@
 =head1 Math::GSL Changes
 
+=head1 v0.24 - April 2011
+    - Fix https://rt.cpan.org/Ticket/Display.html?id=66882 (Tests fail on Perl's with DUSELONGDOUBLE)
+
 =head1 v0.23 - March 2011
     - Fixed the tolerance of some tests that were causing CPANtesters failures
     - Fixed some doc typos
